[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/script/GUI.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/font/Akira Expanded Demo.otf"

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/font/Akira Expanded Demo.otf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/Akira Expanded Demo.otf"

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = SubResource( 7 )

[sub_resource type="InputEventAction" id=11]
action = "play_game"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventAction" id=13]
action = "go_to_main_menu"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0
custom_constants/separation = 0

[node name="CenterScore" type="CenterContainer" parent="VBoxContainer"]
margin_right = 974.0
margin_bottom = 28.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer/CenterScore"]
margin_left = 476.0
margin_right = 498.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 974.0
margin_bottom = 498.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 343.0
margin_top = 144.0
margin_right = 630.0
margin_bottom = 325.0
custom_constants/separation = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 287.0
margin_bottom = 18.0

[node name="MyHighscore" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 287.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 10 )
text = "your highscore: "
align = 1

[node name="Message" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 287.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 8 )
text = "Game over"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 287.0
margin_bottom = 181.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer"]
margin_left = 40.0
margin_right = 247.0
margin_bottom = 56.0
custom_constants/separation = 8

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
margin_right = 207.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 10 )
shortcut = SubResource( 12 )
text = "play again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 207.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 10 )
shortcut = SubResource( 14 )
text = "main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoCount" type="Label" parent="VBoxContainer"]
margin_top = 498.0
margin_right = 974.0
margin_bottom = 526.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Ammo: 1"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
